# symbolic_polynomials

./: Cargo.toml
examples/: demo.rs
src/: composite.rs  functions.rs  integer_impl.rs  lib.rs  monomial.rs  polynomial.rs  traits.rs
tests/: functions.rs  monomial.rs  polynomial.rs
